- fixed blurry image downscaling in chrome

--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,7 @@ body {
   height: 100%;
   max-height: 100%; /*fix for safari*/
   object-fit: cover;
+  image-rendering: -webkit-optimize-contrast; /*chrome blurry image fix*/
 }
 
 .references-images-slideshow-text-container {
